<resources>
    <string name="app_name">:ProtoCalc:</string>
    <string name="random_text">hello world</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="subt">-</string>
    <string name="clear">CLR</string>
    <string name="zero">0</string>
    <string name="addtion">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="multiply">X</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
</resources>